--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# Editor directories and files
+!.vscode/extensions.json
+.idea
+.DS_Store
+.env
